# jkbiolib

./: pyproject.toml
doc/: fastq.md  star-fusion.qmd
jkbiolib/data/: thousg-short_read-high_cov.index.tsv
jkbiolib/datasets/: loaders.py
jkbiolib/variant/: vcf2stix_queries.py
tests/: README.md  test_variant.py
tests/data/: .gitignore  download_data.sh
