[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jkbiolib"
version = "0.1.0"
description = "Bioinformatics library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyvcf2>=0.30",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle, pyflakes, isort

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ipython>=9.14.0",
]
